test/fail/non-theorems/Issue1/Functions/24-bar.fof
%-----------------------------------------------------------------------------
% This file was generated automatically by Apia.
%-----------------------------------------------------------------------------

%-----------------------------------------------------------------------------
% The general axiom(s).

% The source Agda term was:
% Name: Issue1.Functions.foo
% Role: axiom
% Line: 20
fof(n12_82241428, axiom, ( ! [A] : kp1_(cNAME_6_82241428,A) )).

% End general axiom(s).

%-----------------------------------------------------------------------------
% The conjecture.

% The source Agda term was:
% Name: Issue1.Functions.bar
% Role: prove
% Line: 24
fof(n16_82241428, conjecture, ( ! [A] : kp1_(nAME_8_82241428,A) )).

% End conjecture.

%-----------------------------------------------------------------------------
% End TPTP file.
